--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,12 @@
   </properties>
 
   <dependencies>
+  <!-- https://mvnrepository.com/artifact/org.webjars/sweetalert -->
+<dependency>
+    <groupId>org.webjars</groupId>
+    <artifactId>sweetalert</artifactId>
+    <version>2.1.0</version>
+</dependency>
     <dependency>
     <groupId>org.apache.maven.plugins</groupId>
     <artifactId>maven-surefire-plugin</artifactId>
@@ -65,8 +71,6 @@
     <artifactId>commons-collections4</artifactId>
     <version>4.4</version>
 </dependency>
-    
-    
     
   </dependencies>
 
